M-23-Highlight Statement Module - Not Resizing Correctly on Mobile/Tablet

--- a/eaton.frontend/src/components/text/css/views/_view-statement.scss
+++ b/eaton.frontend/src/components/text/css/views/_view-statement.scss
@@ -17,7 +17,8 @@
   //-----------------------------------
   @include media-mobile-and-tablet {
     &__content {
-      font-size: 2.375em;
+      font-size: 1.063em;
+      line-height: 2em;
     }
   }
 
